Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96597

Crash on WebEngine(View|Profile).userScripts.collection property get

    XMLWordPrintable

Details

    • All
    • f5fbc34fc1 (qt/qtwebengine/dev) 0575ffc991 (qt/qtwebengine/6.3) 9d350003fe (qt/qtwebengine/6.2) 0575ffc991 (qt/qtwebengine/6.3.0) 9d350003fe (qt/qtwebengine/6.2) 9d350003fe (qt/qtwebengine/6.2)

    Description

      On the first execution of QML code like:

      let c = profile.userScripts.collection
      // or..
      console.log(view.userScript.collection)
      

      crash with a stacktrace happens:

      PASS   : qmltests::WebEngineViewUserScripts::initTestCase()
      Process 905442 stopped
      * thread #1, name = 'tst_qmltests', stop reason = signal SIGSEGV: invalid address (fault address: 0x8)
          frame #0: 0x00007fffbf5d1208 libQt6Qml.so.6`QQmlContext::engine() const [inlined] QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get(this=<unavailable>) const at qscopedpointer.h:147:16
         144
         145      T *get() const noexcept
         146      {
      -> 147          return d;
         148      }
         149
         150      bool isNull() const noexcept
      (lldb) bt
      * thread #1, name = 'tst_qmltests', stop reason = signal SIGSEGV: invalid address (fault address: 0x8)
        * frame #0: 0x00007fffbf5d1208 libQt6Qml.so.6`QQmlContext::engine() const [inlined] QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get(this=<unavailable>) const at qscopedpointer.h:147:16
          frame #1: 0x00007fffbf5d11f4 libQt6Qml.so.6`QQmlContext::engine() const [inlined] decltype(ptr=<unavailable>)) qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const>(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) at qglobal.h:1304
          frame #2: 0x00007fffbf5d11f4 libQt6Qml.so.6`QQmlContext::engine() const [inlined] QQmlContext::d_func(this=<unavailable>) const at qqmlcontext.h:64
          frame #3: 0x00007fffbf5d11f4 libQt6Qml.so.6`QQmlContext::engine(this=<unavailable>) const at qqmlcontext.cpp:220
          frame #4: 0x00007ffff7e6d4cf libQt6WebEngineQuick.so.6`QQuickWebEngineScriptCollection::collection(this=0x0000603000fa1890) const at qquickwebenginescriptcollection.cpp:125:35
          frame #5: 0x00007ffff7e2b30c libQt6WebEngineQuick.so.6`QQuickWebEngineScriptCollection::qt_static_metacall(_o=<unavailable>, _c=<unavailable>, _id=<unavailable>, _a=<unavailable>) at moc_qquickwebenginescriptcollection_p.cpp:140:57
          frame #6: 0x00007fffbf3750bb libQt6Qml.so.6`QV4::QObjectWrapper::getProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*) [inlined] QQmlPropertyData::readPropertyWithArgs(this=0x000060600073fa70, target=0x0000603000fa1890, args=<unavailable>) const at qqmlpropertydata_p.h:359:13
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kiburtse Kirill Burtsev
            kiburtse Kirill Burtsev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes