Fix crash on WebEngine(View|Profile).userScripts.collection get

To create a javascript list on 'collection' method qml engine is needed
for a qml scope, but it's only available for objects, which are created
by the QML Engine itself. The only object in hierarchy of classes is an
actual WebEngineView, so get it from there on collection init.
Also implement delayed initialization of scripts collection for the
usage of default profile through WebEngine singleton, and for the reason
that it's not really needed until really asked by user code.

Fixes: QTBUG-96597
Change-Id: I61e76652a5d0fd5609070fd541816503908f2dc8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit f5fbc34fc16fc9c6e7f7e8bbbf60f5b343b9466d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>