src/webenginequick/api/qquickwebengineprofile.h
@@ -170,6 +170,7 @@ private:
     Q_DECLARE_PRIVATE(QQuickWebEngineProfile)
     QQuickWebEngineProfile(QQuickWebEngineProfilePrivate *, QObject *parent = nullptr);
     QQuickWebEngineSettings *settings() const;
+    void ensureQmlContext(const QObject *object);
 
     friend class FaviconImageResponseRunnable;
     friend class QQuickWebEngineSingleton;
